<resources>
    <string name="app_name">EjemploPersonasBBDD</string>
    <string name="iduser">ID</string>
    <string name="nombreuser">Usuario</string>
    <string name="idHint">ID</string>
    <string name="nombreHint">NOMBRE</string>
    <string name="telefono">TELEFONO</string>
    <string name="telefonoHint">TELEFONO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mandardato">MANDAR DATO</string>
    <string name="resultado_suma">RESULTADO SUMA</string>
</resources>